finally a sort-of plan for Lecture 5.1

--- a/sigma.tex
+++ b/sigma.tex
@@ -13,11 +13,44 @@
 
 \section{Thom sheaves}
 
-The analysis of $BSU_K$, purely in terms of special divisors.
+\begin{definition}
+Let $E$ be a complex-orientable theory and let $V \to X$ be a complex vector bundle over a space $X$.  The cohomology of the Thom space $E^* T(V)$ forms a $1$--dimensional $E^* X$--module, and we denote the associated line bundle over $X_E$ by $\ThomSheaf{V}$.
+\end{definition}
 
-Thom spaces and Thom sheaves
+\begin{remark}
+The utility of this definition is that it only uses the \emph{property} that $E$ is complex-orientable, and it begets only the \emph{property} that $\ThomSheaf{V}$ is a line bundle.
+\end{remark}
 
-The phrasing of $MUP$ and $MU$ orientations in terms of $C^0$ and $C^1$--structures.  (Maybe avoid using this notation, though, since the special divisor presentation is nontrivially equivalent to $C^2$?)
+\todo{Relationship between $\ThomSheaf{V}$ and the divisor inspired by $V$.}
+
+\todo{Euler classes and Thom classes}
+
+% \begin{definition}
+% For a divisor $D$ on a curve $C$ over $X$ with pointing $\zeta: X \to C$, set the \textit{Thom sheaf} of $D$ to be the line bundle $L(D) = \zeta^* J(D)$ over $X$, with $J(D)$ the ideal sheaf on $C$ defining $D$.  It satisfies $L(D + D') = L(D) \otimes L(D')$.  If $C$ has a coordinate $x$, then $J(D)$ has a generator $f_D(x)$ and $L(D)$ also has a generator $u_D$, called the \textit{Thom class}.  It satisfies $u_{D + D'} = u_D \otimes u_{D'}$.
+% \end{definition}
+
+As a warm-up, we will use these ideas to study the available complex orientations of a given complex-orientable theory.
+
+\todo[inline]{The $E$--homology of $MU$ is supposed to be $C^1(\CP^\infty_E; \sheaf I(0))$, with $E$--linear dual the $E$--cohomology of $MU$.  A map $MU \to E$ of rings is detected by a map $E_* MU \to E_*$ of $E_*$--algebras.}
+
+\todo{The phrasing of $MUP$ and $MU$ orientations in terms of $C^0$ and $C^1$--structures.  (Maybe avoid using this notation, though, since the special divisor presentation is nontrivially equivalent to $C^2$?)}
+
+\todo{Relationship between $X^E$ and $X_E$ for a nice $H$--space $X$.}
+
+
+
+\begin{lemma}
+The Postnikov fibration \[BSU \to BU \xrightarrow{B\det} BU(1)\] induces a short exact sequence of group schemes
+\begin{center}
+\begin{tikzcd}
+BSU_E \arrow{r} \arrow[-,double]{d} & BU_E \arrow{r}{B\det} \arrow[-,double]{d} & BU(1) \arrow[-,double]{d} \\
+\SDiv_0 \CP^\infty_E \arrow{r} & \Div_0 \CP^\infty_E \arrow{r}{\mathrm{sum}} & \CP^\infty_E.
+\end{tikzcd}
+\end{center}
+\end{lemma}
+\begin{proof}
+\todo{I dunno. Prove this?}
+\end{proof}
 
 Generalization to $MSU$ orientations
 
