slightly different course wrap-up plan

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -1,6 +1,17 @@
 % -*- root: main.tex -*-
 
-\chapter{Knowns and unknowns}
+\chapter{Loose ends}
+
+---
+
+\todo[inline]{I'd like to spend a couple of days talking about ways the picture in this class can be extended, finally, some actually unanswered questions that naturally arise.  The following two section titles are totally made up and probably won't last.}
+
+\section{$E_\infty$ geometry}
+
+\section{Knowns and unknowns}
+
+
+
 
 \section{Erase me}
 
@@ -8,7 +19,11 @@
 
 \section{Erase me}
 
-\section{Erase me}
+
+-----
+
+
+
 
 \oldsection*{The modularity of the $M\String$ orientation}
 
