--- a/hinfty.tex
+++ b/hinfty.tex
@@ -478,7 +478,47 @@ The map $\psi_\ell^{\G/E} \co i^* \G \to (\psi_\ell^E)^* \G$ of 3.15 is an isoge
 
 3.24 might be interesting.
 
-\todo[color=red,inline]{I left off at Section 4.3.  So far, it seems like the point is that the identity map on $MU\<0\>$ classifies a section of the ideal sheaf at zero of the universal formal group which is compatible with descent for level structures, so any $H_\infty$ map out of $MU\<0\>$ classifies not just a section of the ideal sheaf at zero of whatever other formal group but does so in a way that is, again, compatible with descent for level structures.}
+\todo[inline]{So far, it seems like the point is that the identity map on $MU\<0\>$ classifies a section of the ideal sheaf at zero of the universal formal group which is compatible with descent for level structures, so any $H_\infty$ map out of $MU\<0\>$ classifies not just a section of the ideal sheaf at zero of whatever other formal group but does so in a way that is, again, compatible with descent for level structures.}
+
+\begin{theorem}\citeme{Prop 4.13} \todo{The discussion leading up to this theorem seems interesting, especially equations 4.10,12.}
+Let $g: MU\<0\> \to E$ be a homotopy multiplicative map, and let $s = s_g$ be the corresponding trivialization of $\sheaf I_{\G}(0)$.  If the map $g$ is $H_\infty$, then for any level structure $\ell: A \to i^* \G$ the section $s$ satisfies the identity \[N_{\psi_\ell^{\G/E}} i^* s = (\psi_\ell^E)^* s,\] in which the isogeny $\psi_\ell^{\G/E}$ has been used to make the identification \[N_{\psi_\ell^{\G/E}} i^* \sheaf I_{\G}(0) \cong \sheaf I_{(\psi_\ell^E)^* \G}(0). \qed\]
+\end{theorem}
+
+\begin{lemma}\citeme{Eqn 5.3, generalizes Quillen's splitting formula}
+For $V$ a vector bundle on a space $X$ and $V_{reg}$ the (vector bundle over $BA^*$ induced from) the regular representation on $A$, there is an isomorphism of sheaves over $(BA^* \times X)_E$ \[\ThomSheaf{V_{reg} \otimes V} \cong \bigotimes_{a \in A} \widetilde T_a \ThomSheaf{V}.\]
+\end{lemma}
+
+Eqn 5.4 claims to use 5.3 but seems to be using something about the behavior of the norm map on line bundles vs the translated sum of divisors appearing in 5.3.
+
+The beginning of the proof of 6.1 appears to be a simplification of some of the descent arguments appearing in the algebraic parts of Matt's thesis's main calculations.  On the other hand, I can't even read what the McClure reference in 6.1 is doing.  What's $\Delta^*$??
+
+\begin{lemma}\citeme{Prop 7.5}
+Take $\pi_0 E$ to be a complete local ring and $\G_E$ to be of finite height.  If $B^* \subset A^*$ is a proper subgroup, then the following composite map of $\pi_0 E$--modules is zero: \[\pi_0 E^{BB^*_+} \xrightarrow{transfer} \pi_0 E^{BA^*_+} \xrightarrow{\chi_\ell} \sheaf O(T).\]
+\end{lemma}
+\begin{proof}
+It suffices to consider the tautological level structure over $\Level(A, \G)$.  We may take $A$ to be a $p$--group, and indeed for now we set $A = \Z/p$, $B = 0$.  For $t \in \pi_0 E^{\CP^\infty_+}$ a coordinate with formal group law $F$, we have \[\pi_0 E^{BA^*_+} \cong \pi_0 E \ps{t} / [p]_F(t)\] and $\tau: \pi_0 E^{BB^*_+} = \pi_0 E \to \pi_0 E^{BA^*_+}$ is given by $\tau(1) = \<p\>_F(t)$, where $\<p\>_F(t) = [p]_F(t) / t$ is the ``reduced $p$--series''.  The result then follows from the isomorphism $\sheaf O(\Level(\Z/p, \G_E)) \cong \pi_0 E\ps{t} / \<p\>_F(t)$.  The result then follows in general by induction: $B^*$ can be taken to be a \emph{maximal} proper subgroup of $A^*$, with cokernel $\Z/p$.
+\end{proof}
+
+\begin{example}
+Let $\G_m$ be the formal multiplicative group with coordinate $x$ so that the group law is \[x +_{\G_m} y = x + y - xy, \quad [p](x) = 1 - (1 - x)^p.\]  The monomorphism $\Z/p \to \G_m(\Z\ps{y} / [p](y))$ given by $j \mapsto [j](y)$ becomes the zero map under the base change
+\begin{align*}
+\Z\ps{y} / [p](y) & \to \Z/p, \\
+y & \mapsto 0.
+\end{align*}
+\end{example}
+
+\begin{remark}\citeme{Corollary 9.21, Prop 9.17}
+If $R$ is a domain of characteristic $0$, then a level structure over $R$ actually induces a monomorphism on points.
+\end{remark}
+
+\begin{lemma}\citeme{Prop 9.24} \todo{One of the reduction steps in Prop 6.1 is handled by 9.24, which is in turn equivalent to a basic case of an HKR theorem, so should be stated on that day (or in the algebraic day).}
+The natural map \[\sheaf O(\InternalHom{FormalGroups}(\Z/p, \G)) \to R \times \sheaf O(\Level(\Z/p, \G))\] is injective.
+\end{lemma}
+\begin{proof}
+\todo{Fill this.}
+\end{proof}
+
+\todo[color=red,inline]{I left off at Section 10.}
 
 
 
