--- a/sigma.tex
+++ b/sigma.tex
@@ -40,7 +40,7 @@ Suppose that $X$ is a space, and that $V$ is a complex vector bundle over $X$.  
 Here is a series of examples that lead to a fairly complete understanding of the functor $\mathbb L$:
 \begin{enumerate}
 \item If $\L$ denotes the canonical line bundle over $\CP^\infty$, then the zero section identifies $E^0 (\CP^\infty)^{\L}$ with the augmentation ideal in $E^0 \CP^\infty$, and so we have an isomorphism $\ThomSheaf{\L} \cong \sheaf I(0)$.
-\item Suppose that $V$ is a line bundle over $X$, classified by a map $b \co X \to \CP^\infty$.  In terms of algebraic geometry, the map $b$ defines an $X_E$--valued point $b = b_E$ of $\G$.  It follows that \[\ThomSheaf{V} \cong b^* \sheaf I(0) \cong 0^* \sheaf{-b}.\]
+\item Suppose that $V$ is a line bundle over $X$, classified by a map $b \co X \to \CP^\infty$.  In terms of algebraic geometry, the map $b$ defines an $X_E$--valued point $b = b_E$ of $\G$.  It follows that \[\ThomSheaf{V} \cong b^* \sheaf I(0) \cong 0^* \sheaf I(-b).\]
 \item Taking $X$ to be a point and $V$ to be the trivial complex line bundle in the above, we have $\ThomSheaf{V} \cong 0^* \sheaf I(0)$.  Now $\ThomSheaf{V}$ is the sheaf associated to $\pi_2 E$, while $0^* \sheaf I(0)$ is the sheaf of cotangent vectors at the origin of $\G$, isomorphic to the sheaf $\omega_{\G}$ of invariant differentials on $\G$.
 \item If $V$ is the trivial bundle of dimension $k$, then $\ThomSheaf{V}$ is just $\omega_{\G}^k$.  If $f \co E \to F$ is an $E$--algebra (e.g., $F = E^{X_+}$), then this gives an interpretation of $\pi_{2k} F$ as $f^* \omega_{\G}^k$.
 \item If $V = (1 - \L)$ is the reduced canonical line bundle over $\CP^\infty$, then using all the above we have \[\ThomSheaf{V} \cong \pi^* 0^* \sheaf I (0) \otimes \sheaf I(0)^{-1} = \Theta^1(\sheaf I(0)),\] where $\pi: \G_E \to S_E$ is the structural map and $\Theta^1$ is the usual.
@@ -116,7 +116,7 @@ BSU_E \arrow{r} \arrow[-,double]{d} & BU_E \arrow{r}{B\det} \arrow[-,double]{d} 
 
 Generalization to $MSU$ orientations
 
-Is it possible to give an example of a complex-oriented theory which receives an $MSU$ orientation which \emph{does not} factor the complex orientation but \emph{does} (\emph{must}, really) factor the unit?
+Is it possible to give an example of a complex-oriented theory which receives an $MSU$ orientation which \emph{does not} factor the complex orientation but \emph{does} (\emph{must}, really) factor the unit?  This must have to do with the $\tau$ map, in order to check that the map isn't $\delta$ of something...?
 
 
 
