--- a/intro.tex
+++ b/intro.tex
@@ -74,7 +74,7 @@ Leaving aside the extension problem for the moment, their main theorem is the fo
 For $E$ an even--periodic cohomology theory, \[\Spec E_* MU[6, \infty) \cong C^3(\G_E; \sheaf I(0)),\] where ``$C^3(\G_E; \sheaf I(0))$'' is a certain scheme.  When $E$ is taken to be elliptic, so that there is a specified isomorphism $\G_E \cong C^\wedge_0$ for $C$ an elliptic curve, the theory of elliptic curves furnishes the scheme with a canonical point.  Hence, there is a preferred class $MU[6, \infty) \to E$, natural in the choice of elliptic $E$. \qed
 \end{theorem}
 
-\noindent Our real goal is to understand theorems like this last one, where algebraic geometry asserts some real control over something in the domain of homotopy theory.  The structure of the class will be to work through a sequence of case studies where this perspective shines through most brightly.  We'll start by working through Thom's calculation of the homotopy of $MO$, which simultaneously holds the attractive features of being free of technical complexity while revealing essentially all of the structural complexity.  Having seen that through to the end, we'll then venture on to other examples: the complex bordism ring, structure theorems for finite spectra, unstable cooperations, and, finally, the theorem above.  The overriding theme of the class will be that algebraic geometry is a good organizing principle that gives us one avenue of insight into how homotopy theory functions.
+\noindent Our real goal is to understand theorems like this last one, where algebraic geometry asserts some real control over something in the domain of homotopy theory.  The structure of the class will be to work through a sequence of case studies where this perspective shines through most brightly.  We'll start by working through Thom's calculation of the homotopy of $MO$, which simultaneously holds the attractive features of being free of technical complexity while revealing essentially all of the structural complexity.  Having seen that through to the end, we'll then venture on to other examples: the complex bordism ring, structure theorems for finite spectra, unstable cooperations, and, finally, the theorem above.  The overriding theme of the class will be that algebraic geometry is a good organizing principle that gives us one avenue of insight into how homotopy theory functions.  In particular, it will give us a means to organize collections of maps, or ``operations'' of various sorts, between various spectra derived from bordism theories.
 
 We should also mention that we will specifically \emph{not} discuss the following aspects of this story:
 \begin{itemize}
